--- a/css/main.css
+++ b/css/main.css
@@ -1134,11 +1134,97 @@ display: inline-flex;
     width: 347px;
 }
 
-.graeme_miller {
+/*.graeme_miller {
     background: white;
     text-align: left;
     padding-bottom: 0px;
+}*/
+
+
+
+
+.graeme_miller{
+/*    position: relative;
+    padding-top: 10px;
+    height: 97px;
+    padding-right: 5px;
+    width: 110px;
+    margin-top: 0px;
+    content: url("../img/mts_w108px_X_h95px.jpg");
+    transition-property: margin-top;*/
+    position:relative;
+    overflow:hidden;
+    width:110px;
+    height:97px;
 }
+.graeme_miller .bg{
+/*    position: absolute;
+    padding-top: 10px;
+    height: 97px;
+    padding-right: 5px;
+    width: 110px;
+    margin-top: 0px;
+    content: url("../img/mts_w108px_X_h95px.jpg");
+    transition-property: margin-top;*/
+    position:absolute;
+    visibility: collapse;
+    top:0;
+    left:0;
+    width:110px;
+    height:97px;
+    margin-top:97px;
+}
+.graeme_miller:hover .bg{
+/*    padding-top: 10px;
+    height: 97px;
+    padding-right: 5px;
+    width: 110px;
+    content: url("../img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg");*/
+    /*content: url("../img/mts_w108px_X_h95px.jpg");
+    position: relative;
+    /*margin-top: 97px;*/
+    visibility: visible;
+    margin-top:0;  
+}
+
+.graeme_miller img{
+/*    position: relative;
+    padding-top: 10px;
+    height: 97px;
+    padding-right: 5px;
+    width: 110px;*/
+    /*margin-top: 0px;*/
+    /*content: url("../img/mts_w108px_X_h95px.jpg");*/
+    /*transition-property: margin-top;*/
+     margin-top:0;
+}
+.graeme_miller:hover img{
+/*    position: absolute;
+    padding-top: 10px;
+    height: 97px;
+    padding-right: 5px;
+    width: 110px;*/
+    /*margin-top: 0px;*/
+    /*content: url("../img/mts_w108px_X_h95px.jpg");*/
+    /*transition-property: margin-top;*/
+    margin-top:0px;
+}
+
+.bg_in {
+    /*padding-top: 50px;*/
+}
+.graeme_miller img, .bg {
+    -webkit-transition: all 0.6s ease;
+    transition: all 0.6s ease;
+}
+
+
+
+
+
+
+
+
 
 
 
