--- a/css/main.css
+++ b/css/main.css
@@ -1156,8 +1156,9 @@ display: inline-flex;
     transition-property: margin-top;*/
     position:relative;
     overflow:hidden;
-    width:110px;
-    height:97px;
+    width:333px;
+    height:250px;
+    background-color: white;
 }
 .graeme_miller .bg{
 /*    position: absolute;
