--- a/css/main.css
+++ b/css/main.css
@@ -1295,6 +1295,7 @@ padding-bottom: 6px;
     overflow:hidden;
     width:110px;
     height:97px;
+    margin-right: 6px;
 }
 .max_telecom .bg{
 /*    position: absolute;
