--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,7 @@ list-style-type: none;
     width:555px;
 
 }
-.carousel_cls_con_up ul{
+.carousel_cls_con_up{
     font-weight: 400;
     font-size: 22px; 
     /*line-height: 44px; */
@@ -217,7 +217,8 @@ list-style-type: none;
 }
 .carousel_cls_internal ul{
     padding-left: 0;
-    padding-top: 30px;
+    padding-top: 15px;
+    padding-bottom: 20px;
 }
 
 
