--- a/css/main.css
+++ b/css/main.css
@@ -226,6 +226,16 @@ list-style-type: none;
     text-decoration: none;
 
 } 
+.carousel_cls_con_up > li > a{
+    font-weight: 400;
+    font-size: 22px; 
+    /*line-height: 44px; */
+    text-align: left;
+    /*width:415px;*/
+    color: white;
+    text-decoration: none;
+
+} 
 .carousel_cls_internal ul{
     padding-left: 0;
     padding-top: 15px;
