--- a/css/main.css
+++ b/css/main.css
@@ -861,7 +861,66 @@ time{
 
 }
 
+.jonathan_pierce .bg{
+/*    position: absolute;
+    padding-top: 10px;
+    height: 97px;
+    padding-right: 5px;
+    width: 110px;
+    margin-top: 0px;
+    content: url("../img/mts_w108px_X_h95px.jpg");
+    transition-property: margin-top;*/
+    position:absolute;
+    visibility: collapse;
+    top:0;
+    left:0;
+    width:110px;
+    height:97px;
+    margin-top:97px;
+}
+.jonathan_pierce:hover .bg{
+/*    padding-top: 10px;
+    height: 97px;
+    padding-right: 5px;
+    width: 110px;
+    content: url("../img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg");*/
+    /*content: url("../img/mts_w108px_X_h95px.jpg");
+    position: relative;
+    /*margin-top: 97px;*/
+    visibility: visible;
+    margin-top:0;  
+}
 
+.jonathan_pierce .person_box{
+/*    position: relative;
+    padding-top: 10px;
+    height: 97px;
+    padding-right: 5px;
+    width: 110px;*/
+    /*margin-top: 0px;*/
+    /*content: url("../img/mts_w108px_X_h95px.jpg");*/
+    /*transition-property: margin-top;*/
+     margin-top:0;
+}
+.jonathan_pierce:hover .person_box{
+/*    position: absolute;
+    padding-top: 10px;
+    height: 97px;
+    padding-right: 5px;
+    width: 110px;*/
+    /*margin-top: 0px;*/
+    /*content: url("../img/mts_w108px_X_h95px.jpg");*/
+    /*transition-property: margin-top;*/
+    margin-top:0px;
+}
+
+.bg_in {
+    /*padding-top: 50px;*/
+}
+.jonathan_pierce .person_box, .bg {
+    -webkit-transition: all 0.6s ease;
+    transition: all 0.6s ease;
+}
 
 .companies{
 display: inline-flex;
