--- a/css/main.css
+++ b/css/main.css
@@ -946,6 +946,7 @@ padding-bottom: 6px;
     width:110px;
     height:97px;
     padding-right: 6px;
+    margin-left: -10px;
 }
 .mtc .bg{
 /*    position: absolute;
