--- a/css/main.css
+++ b/css/main.css
@@ -1317,15 +1317,6 @@ padding-bottom: 6px;
 
 
 
-
-
-
-
-
-
-
-
-
 .graeme_miller hr{
     -webkit-margin-start: auto;
     -webkit-margin-end: auto;
@@ -1360,7 +1351,8 @@ padding-bottom: 6px;
 }
 
 .graeme_miller blockquote:before{
-    content: url("../img/JT-GM-face.png");
+    /*content: url("../img/JT-GM-face.png");*/
+    content: url("../img/quote-grey.png");
     float:left;
     padding-right: 5px;
 }
@@ -1369,7 +1361,6 @@ padding-bottom: 6px;
     padding-right: 15px;
     float:right;
 }
-
 
 
 .max_telecom{
@@ -1830,7 +1821,7 @@ padding-bottom: 6px;
     width:110px;
     height:97px;
     margin-left: -6px;
-    padding-right: 6px;
+    padding-right: 7px;
 }
 .three_mob .bg{
 /*    position: absolute;
