--- a/css/main.css
+++ b/css/main.css
@@ -1335,7 +1335,7 @@ padding-bottom: 6px;
 
 .graeme_miller blockquote{
     color:  #565656;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 300;
     line-height: 23px; 
     margin: 0;
@@ -1710,7 +1710,7 @@ padding-bottom: 6px;
     position: relative;
     /*margin-top: 97px;*/
     visibility: visible;
-    margin-top:0;  
+    margin-top:0px;  
 }
 
 .adale_kehassan .person_box{
@@ -1722,7 +1722,7 @@ padding-bottom: 6px;
     /*margin-top: 0px;*/
     /*content: url("../img/mts_w108px_X_h95px.jpg");*/
     /*transition-property: margin-top;*/
-     margin-top:0;
+     margin-top:0px;
 }
 .adale_kehassan:hover .person_box{
 /*    position: absolute;
