--- a/css/main.css
+++ b/css/main.css
@@ -1691,10 +1691,10 @@ padding-bottom: 6px;
     margin-top: 0px;
     content: url("../img/mts_w108px_X_h95px.jpg");
     transition-property: margin-top;*/
-    position:relative;
+    position:absolute;
     visibility: collapse;
     top:0;
-    left:0;
+    right:0;
     width:110px;
     height:97px;
     margin-top:97px;
