--- a/css/main.css
+++ b/css/main.css
@@ -2005,6 +2005,10 @@ padding-bottom: 6px;
 }
 
 .more_btn_see_more{
+/*  text-decoration: none;
+  position: center;*/
+}
+.more_btn_see_more > a{
   text-decoration: none;
   position: center;
-}
+} 
