--- a/css/main.css
+++ b/css/main.css
@@ -2010,5 +2010,5 @@ padding-bottom: 6px;
 }
 .more_btn_see_more > a{
   text-decoration: none;
-  position: center;
+  text-decoration-color: white;
 } 
