--- a/css/main.css
+++ b/css/main.css
@@ -2054,7 +2054,7 @@ footer ul{
 }
 
 footer ul > li{
-font-size: 12px;
+font-size: 14px;
 }
 
 .site_map_internal{
@@ -2071,6 +2071,8 @@ font-size: 12px;
 
 .site_map_internal h5{
 font-size: 20px;
+font-weight: normal;
+margin-bottom: 10px;
 }
 
 
