--- a/css/main.css
+++ b/css/main.css
@@ -2067,6 +2067,8 @@ font-size: 14px;
     margin-right: 10px;
     margin-bottom: 0px;
     margin-left: 10px;
+    font-size: 20px;
+    font-weight: normal;
 }
 
 .site_map_internal h5{
@@ -2084,8 +2086,8 @@ margin-bottom: 10px;
     background: -ms-linear-gradient(90deg, rgba(93, 93, 93, 0.28) 0%, rgba(255, 255, 255, 0.28) 100%);
     background: linear-gradient(0deg, rgba(93, 93, 93, 0.28) 0%, rgba(255, 255, 255, 0.28) 100%);
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.11);
-    width: 263px;
-    height: 323px;
+    width: 253px;
+    height: 253px;
     vertical-align: top;
     position: relative;
 }
