--- a/css/main.css
+++ b/css/main.css
@@ -2069,6 +2069,7 @@ font-size: 14px;
     margin-left: 10px;
     font-size: 20px;
     font-weight: normal;
+    color: white;
 }
 
 .site_map_internal h5{
