--- a/css/main.css
+++ b/css/main.css
@@ -2102,7 +2102,7 @@ margin-bottom: 10px;
       vertical-align: top;
       width: 69px;
       height: 99px;
-       margin-top: 0; 
+      margin-top: 0; 
       margin-right: 5px;
       margin-bottom: 10px;
       margin-left: 10px;
@@ -2117,8 +2117,7 @@ margin-bottom: 10px;
 }
 .site_map_time .day_cls{
     padding-top: 0; 
-      vertical-align: top;
-
+    vertical-align: top;
    padding-right: 0px; 
   padding-left: 0;
   padding-bottom: 0; 
@@ -2144,7 +2143,6 @@ margin-bottom: 10px;
     box-shadow: 0px 1px 0px 0px #434343;
     width: 230px;
     height: 1px;
-
     display: block;
     border: 0;
     border-top: 1px solid #ccc;
@@ -2264,8 +2262,9 @@ text-align: left;
 }
 
 .adale_kehassan,
-.three_mob,
-.play{
+.graeme_miller,
+.companies,
+.companies_middle{
     display: none;
 }
 
@@ -2540,6 +2539,7 @@ text-align: left;
 
 .what_can_we_do{
     height: 100%;
+    display: inline-flex;
 }
 .what_can_we_do h3{
     padding-top: 100px;
