--- a/css/main.css
+++ b/css/main.css
@@ -2263,6 +2263,7 @@ text-align: left;
 
 .adale_kehassan,
 .graeme_miller,
+.jonathan_pierce .bg,
 .companies,
 .companies_middle{
     display: none;
