--- a/css/main.css
+++ b/css/main.css
@@ -398,7 +398,7 @@ list-style-type: none;
     opacity: 1;
 }
 
-.boxes_cls .more_text >:hover{
+.boxes_cls a >:hover{
     /*color: #30A4D9;*/
     text-decoration: underline;
 }
