--- a/css/main.css
+++ b/css/main.css
@@ -301,7 +301,8 @@ list-style-type: none;
 .first,
 .second ,
 .third ,
-.forth{
+.forth,
+.fifth{
     background: #e5e5e5;
     color: #e5e5e5;
     font: 1em/11px Arial;
@@ -319,7 +320,8 @@ list-style-type: none;
 .first:hover,
 .second:hover,
 .third:hover ,
-.forth:hover{
+.forth:hover,
+.fifth:hover{
     background: #2D95C9;
 
 }
