--- a/css/main.css
+++ b/css/main.css
@@ -2550,7 +2550,7 @@ text-align: left;
     position: relative;
     height: 100%;
     text-align: center;
-    display: block;
+    display: inline-flex;
     padding: 0;
 }
 
@@ -2564,7 +2564,7 @@ text-align: left;
 .what_can_we_do ul{
     padding-left: 0px;
     list-style: none;
-    display: inline-flex;
+    /*display: inline-block;*/
 
 }
 /*-------------------------------- Happenings ---------------------------*/
