--- a/css/main.css
+++ b/css/main.css
@@ -2550,7 +2550,7 @@ text-align: left;
     position: relative;
     height: 100%;
     text-align: center;
-    display: inline-flex;
+    /*display: inline-flex;*/
     padding: 0;
 }
 
