--- a/css/main.css
+++ b/css/main.css
@@ -452,7 +452,7 @@ list-style-type: none;
 .what_can_we_do ul{
     padding-left: 0px;
     list-style: none;
-    display: inline-flex;
+    /*display: inline-flex;*/
 
 }
 
@@ -2546,7 +2546,7 @@ text-align: left;
             display: inline-flex;
 }*/
 .offerings_cls{
-  background: url("../img/weDoBackgroundfix.png") no-repeat center center;
+  /*background: url("../img/weDoBackgroundfix.png") no-repeat center center;*/
     position: relative;
     height: 100%;
     text-align: center;
