--- a/css/main.css
+++ b/css/main.css
@@ -452,7 +452,7 @@ list-style-type: none;
 .what_can_we_do ul{
     padding-left: 0px;
     list-style: none;
-    /*display: inline-flex;*/
+    display: inline-flex;
 
 }
 
@@ -2561,12 +2561,12 @@ text-align: left;
 .what_can_we_do h3{
     padding-top: 100px;
 }
-.what_can_we_do ul{
+/*.what_can_we_do ul{
     padding-left: 0px;
     list-style: none;
     position: relative;
 
-}
+}*/
 /*-------------------------------- Happenings ---------------------------*/
 /*-------------------------------- Happenings ---------------------------*/
     .happenings_cls_internal{
