--- a/css/main.css
+++ b/css/main.css
@@ -2506,7 +2506,8 @@ text-align: left;
 }
 .second,
 .third,
-.forth{
+.forth,
+.fifth{
     background: #BCBCBC;
     color: black;
   text-align: center;
