--- a/css/main.css
+++ b/css/main.css
@@ -868,6 +868,7 @@ time{
     width:110px;
     height:97px;
     margin-top:97px;
+    overflow: hidden;
 }
 .jonathan_pierce:hover .bg{
     visibility: visible;
@@ -1342,9 +1343,6 @@ padding-bottom: 6px;
     -webkit-transition: all 0.6s ease;
     transition: all 0.6s ease;
 }
-
-
-
 
 
 .name_info{
