--- a/css/main.css
+++ b/css/main.css
@@ -868,7 +868,7 @@ time{
     width:110px;
     height:97px;
     margin-top:97px;
-    overflow: hidden;
+    overflow-bottom:hidden;
 }
 .jonathan_pierce:hover .bg{
     visibility: visible;
