--- a/css/main.css
+++ b/css/main.css
@@ -332,7 +332,7 @@ list-style-type: none;
     color:white;
     border-radius: 6px;
     padding: 10px;
-    display: inline-flex;
+    display: inline-block;
     margin-right: 10px;
     margin-top: 10px;
     position: relative;
@@ -346,7 +346,10 @@ list-style-type: none;
 
 }
 .boxes_info{
-  
+
+}
+.carousel_cls_internal{
+
 }
 .boxes_cls h2{
     cursor:pointer;
