--- a/css/main.css
+++ b/css/main.css
@@ -332,7 +332,7 @@ list-style-type: none;
     color:white;
     border-radius: 6px;
     padding: 10px;
-    display: inline-block;
+    display: inline-flex;
     margin-right: 10px;
     margin-top: 10px;
     position: relative;
