--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@ body{
     margin: auto;
     display: block;
 }
-
+/*-------------------------------- Header ---------------------------*/
+/*-------------------------------- Header ---------------------------*/
 header{
     height: 90px;
     top:0;
@@ -182,7 +183,8 @@ list-style-type: none;
     height:13px;
 }
 
-
+/*-------------------------------- Carousel ---------------------------*/
+/*-------------------------------- Carousel ---------------------------*/
 .carousel_cls{
     background-image: url("../img/slide-bg-complexity.jpg");
     background-size: auto;
@@ -427,8 +429,8 @@ list-style-type: none;
 }
 
 
-
-
+/*-------------------------------- Offerings ---------------------------*/
+/*-------------------------------- Offerings ---------------------------*/
 .offerings_cls{
     background: url("../img/weDoBackgroundfix.png") no-repeat center center;
     z-index: 25;
@@ -555,7 +557,8 @@ list-style-type: none;
     margin-left: 43%;
   }
 
-
+/*-------------------------------- Happenings ---------------------------*/
+/*-------------------------------- Happenings ---------------------------*/
   .happenings_cls{
     background-image: url("../img/news-and-events-bg.jpg");
     background-size: cover;
@@ -738,8 +741,8 @@ time{
 
 
 
-
-
+/*-------------------------------- Success Stories ---------------------------*/
+/*-------------------------------- Success Stories ---------------------------*/
 .success_stories_cls{
     position: relative;
     background: #ECECEC;
@@ -1387,8 +1390,8 @@ padding-bottom: 6px;
   color: white;
 } 
 
-
-
+/*-------------------------------- Footer ---------------------------*/
+/*-------------------------------- Footer ---------------------------*/
 footer{
     background: #2D2D2D;
     background-size: cover;
