--- a/css/main.css
+++ b/css/main.css
@@ -894,7 +894,8 @@ time{
     margin-top:97px;
     overflow-bottom:hidden;
 }
-/*.jonathan_pierce:hover .bg{
+/*not perfect and that's i decided to remove it*/
+/*.jonathan_pierce:hover .bg{ 
     visibility: visible;
     margin-top:0px;  
 }*/
@@ -1246,7 +1247,7 @@ padding-bottom: 6px;
     height:97px;
     margin-top:97px;
 }
-
+/*not perfect and that's i decided to remove it*/
 /*.adale_kehassan:hover .bg{
     visibility: visible;
     margin-top:0px;  
